--- a/Sample Code/SwiftSampleCode/DJISDKSwiftDemo/Info.plist
+++ b/Sample Code/SwiftSampleCode/DJISDKSwiftDemo/Info.plist
@@ -19,13 +19,13 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>DJISDKAppKey</key>
-	<string>Please Enter Your App Key Here</string>
+	<string>6bce10368f04cc9dcc845b64</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>Use Bluetooth</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
